WP-3585: fix top alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -7852,6 +7852,7 @@ fieldset.collapsible .fieldset-legend {
 .view-display-id-case_listing .views-widget-filter-secondary .form-type-select .form-item,
 .view-display-id-book_listing .views-widget-filter-secondary .form-type-select .form-item,
 .view-display-id-publications_listing .views-widget-filter-secondary .form-type-select .form-item {
+  border-top: 1px solid transparent;
   font-weight: normal;
   margin-bottom: 12px;
   margin-top: 0;
