--- a/sass/partials/design/_search-filters.sass
+++ b/sass/partials/design/_search-filters.sass
@@ -636,6 +636,7 @@ fieldset.collapsible .fieldset-legend
         text-transform: none
       // Checkboxes
       .form-item
+        border-top: 1px solid transparent
         font-weight: normal
         margin-bottom: 12px
         margin-top: 0
